--- a/erp-laplata/package.json
+++ b/erp-laplata/package.json
@@ -29,8 +29,10 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.21",
     "eslint": "9.36.0",
     "eslint-config-next": "15.5.4",
+    "postcss": "^8.5.6",
     "tailwindcss": "^4.1.13",
     "typescript": "^5"
   }
